User Controller updated, modules Get requests finished
