# cms/server/src/data-layer/models/schema.ts
@@ -1,5 +1,5 @@
 import mongoose, { Schema } from "mongoose";
-import { IUser } from "./models";
+import { IModule, IProgramme, ISubsection, IUser } from "./models";
 
 const userSchema: Schema<IUser> = new Schema(
     {
@@ -31,6 +31,56 @@ const userSchema: Schema<IUser> = new Schema(
     {timestamps: true}
 )
 
-const User = mongoose.model<IUser>('User', userSchema);
+const moduleSchema: Schema<IModule> = new Schema(
+    {
+        title: { type: String, required: true },
+        description: { type: String, required: true },
+        subsectionIds: [
+            {
+                type: mongoose.Schema.Types.ObjectId,
+                ref: "Subsection",
+                required: true
+            }
+        ]
+    },
+    { timestamps: true }
+);
 
-export default User
+const programmeSchema: Schema<IProgramme> = new Schema(
+    {
+        name: {
+            type: String,
+            required: true
+        }
+    },
+    {timestamps: true}
+)
+
+const subsectionSchema: Schema<ISubsection> = new Schema(
+    {
+        title: {
+            type: String,
+            required: true
+        },
+        body: {
+            type: String,
+            required: true
+        },
+        authorID: {
+            type: String,
+            required: true
+        },
+        published: {
+            type: Boolean,
+            default: false
+        }
+    },
+    { timestamps: true }
+);
+
+const newModule = mongoose.model<IModule>('newModule', moduleSchema);
+const Programme = mongoose.model<IProgramme>('Programme', programmeSchema);
+const User = mongoose.model<IUser>('User', userSchema);
+const Subsection = mongoose.model<ISubsection>('Subsection', subsectionSchema);
+
+export { Programme, User, Subsection, newModule }
